--- a/index.ipynb
+++ b/index.ipynb
@@ -216,7 +216,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kindof_neighbors = countries[1]\n",
+    "kindof_neighbors = countries[1:5\n",
+    "    ]\n",
     "kindof_neighbors"
    ]
   },
