--- a/index.ipynb
+++ b/index.ipynb
@@ -212,12 +212,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['USA', 'Argentina', 'Mexico', 'USA']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "kindof_neighbors = countries[1:5\n",
-    "    ]\n",
+    "kindof_neighbors = countries[1:5]\n",
     "kindof_neighbors"
    ]
   },
