--- a/index.ipynb
+++ b/index.ipynb
@@ -292,7 +292,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "None # add code here"
+    "contries # add code here"
    ]
   },
   {
