--- a/index.ipynb
+++ b/index.ipynb
@@ -304,7 +304,7 @@
     }
    ],
    "source": [
-    "contries.append('Thailnad') # add code here"
+    "countries.append('Thailnad') # add code here"
    ]
   },
   {
