--- a/index.ipynb
+++ b/index.ipynb
@@ -472,7 +472,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = list(set())"
+    "unique_countries = list(set(countries))"
    ]
   },
   {
