--- a/index.ipynb
+++ b/index.ipynb
@@ -520,7 +520,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_of_repeats = len(countries) - lne\n",
+    "num_of_repeats = len(countries) - lne(unique_)\n",
     "num_of_repeats # 3"
    ]
   },
